--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+        <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0&appId=702038901041945&autoLogAppEvents=1" nonce="zbNjl56s"></script>
+        <div class="fb-like" data-href="https://dohuykhanh.github.io/#services" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
