--- a/index.html
+++ b/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0&appId=702038901041945&autoLogAppEvents=1" nonce="zbNjl56s"></script>
 
-<div class="fb-like" data-href="https://dohuykhanh.github.io/#services" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+<body>
+
+
+
+
+    <h1> BẠN CÓ THÍT TRANG WEB CỦA KHANH KO</h1>
+    <div id="fb-root"></div>
+    <!-- Your Plugin chat code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+        var chatbox = document.getElementById('fb-customer-chat');
+        chatbox.setAttribute("page_id", "109866601748038");
+        chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                xfbml: true,
+                version: 'v14.0'
+            });
+        };
+
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+
+
+
+
+
+
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0&appId=702038901041945&autoLogAppEvents=1" nonce="zbNjl56s"></script>
+
+    <div class="fb-like" data-href="https://dohuykhanh.github.io/#services" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+
+
+    <h1> HÃY VIẾT BÌNH LUẬN GÓP ÝY</h1>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v14.0" nonce="C2tzRmqD"></script>
+
+    <div class="fb-comments" data-href="https://dohuykhanh.github.io/" data-width="" data-numposts="5"></div>
+
+
+
+    <!-- Messenger Plugin chat Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Plugin chat code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+        var chatbox = document.getElementById('fb-customer-chat');
+        chatbox.setAttribute("page_id", "109866601748038");
+        chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+
 </body>
+
 </html>
